# mit-2021-pre-commit-hook

./: .pre-commit-hooks.yaml  README.md  formatter.py  setup.cfg  setup.py
hooks/: __main__.py
