[metadata]
name = hate-2020-formatter
version = 1.0.0
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.entry_points]
console_scripts =
    hate-2020-formatter = hooks.hate_2020_formatter:main