[metadata]
name = hate_2020_formatter
version = 1.0.0
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    tokenize-rt>=3.0.1
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    hate-2020-formatter = hate_2020_formatter._main:main